--- a/client/assets/scss/style.scss
+++ b/client/assets/scss/style.scss
@@ -1,7 +1,19 @@
 /* Reset */
 
-body {
-  margin: 0;
+h1 {
+  font-size: 42px;
+}
+
+h2 {
+  font-size: 34px;
+}
+
+h3 {
+  font-size: 28px;
+}
+
+h4 {
+  font-size: 18px;
 }
 
 /* Generic Styles */ 
@@ -35,6 +47,53 @@ header .nav-items li a {
   padding: 14px 16px;
   text-decoration: none;
 }
+
+/* Componets 
+-------------
+-------------*/
+
+/* Banner */
+
+.banner-wrap {
+  background: #2196F3;
+}
+
+/* Split Layouts */
+
+.two-col {
+  font-size: 0;
+}
+
+.col p {
+  font-size: 16px;
+}
+
+.col .container {
+  padding: 40px;
+}
+
+.col:nth-of-type(1) {
+  background: #795548;
+}
+
+.col:nth-of-type(2) {
+  background: #4CAF50;
+}
+
+.two-col.split .col {
+  display: inline-block;
+  width: 50%;
+}
+
+
+.coll:nth-of-type(1) {
+  background: blue;
+}
+
+.coll:nth-of-type(2) {
+  background: red;
+}
+
 
 /* Footer */
 
