--- a/client/views/layouts/index.hbs
+++ b/client/views/layouts/index.hbs
@@ -5,7 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/foundation.min.css" media="screen">
+  <link rel="stylesheet" href="css/reset.css" media="screen">
   <link rel="stylesheet" href="css/style.css" media="screen">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +17,10 @@
 
     {{> body }}
 
-    {{> footer }}
 
+    <script src="js/jquery.min.js"</script>
+    <script src="js/foundation.min.js"></script>
+
+  
   </body>
 </html>
