Fix for jquery error, repo cleanup

--- a/client/views/partials/footer.hbs
+++ b/client/views/partials/footer.hbs
@@ -1,6 +1,6 @@
 <footer>
-    <div class="container">
-        <div class="footer-list-wrap">
+    <div class="row">
+        <div class="columns small-12">
             <ul class="footer-list">
                 <li><a href="#">Item</a></li>
                 <li><a href="#">Item</a></li>
