--- a/client/views/layouts/index.hbs
+++ b/client/views/layouts/index.hbs
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/foundation.min.css" media="screen">
+  <link rel="stylesheet" href="css/foundation-float.min.css" media="screen">
   <link rel="stylesheet" href="css/reset.css" media="screen">
-  <link rel="stylesheet" href="css/style.css" media="screen">
+  <link rel="stylesheet" href="css/styles.css" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-
 <body>
-    
+
     {{> header }}
 
     {{> body }}
 
+    {{> footer }}
 
-    <script src="js/jquery.min.js"</script>
-    <script src="js/foundation.min.js"></script>
+    <script src="jquery/jquery.min.js"></script>
+    <script src="jquery/foundation.min.js"></script>
 
-  
   </body>
 </html>
