--- a/client/views/partials/header.hbs
+++ b/client/views/partials/header.hbs
@@ -1,11 +1,13 @@
-<header>
-    <nav class="nav">
-        <div class="container">
-            <ul class="nav-items">
-                <li><a href="#">First</a></li>
-                <li><a href="#">Second</a></li>
-                <li><a href="#">Third</a></li>
-            </ul>
-        </nav>
+<header class="nav-menu">
+  <div class="row">
+    <div class="columns small-12">
+      <nav class="nav-list">
+        <ul class="nav">
+          <li><a href="#">First</a></li>
+          <li><a href="#">Second</a></li>
+          <li><a href="#">Third</a></li>
+        </ul>
+      </nav>
     </div>
+  </div>
 </header>
