--- a/client/views/layouts/index.hbs
+++ b/client/views/layouts/index.hbs
@@ -18,7 +18,11 @@
     {{> footer }}
 
     <script src="jquery/jquery.min.js"></script>
-    <script src="jquery/foundation.min.js"></script>
+    <script src="js/foundation.min.js"></script>
+
+    <script>
+      $(document).foundation();
+    </script>
 
   </body>
 </html>
