--- a/client/views/layouts/home-layout.hbs
+++ b/client/views/layouts/home-layout.hbs
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="foundation/foundation-float.min.css" media="screen"> -->
   <!-- Foundation SCSS
   <link rel="stylesheet" href="css/scss-styles.css"> -->
+  <!-- Reset CSS
+  <link rel="stylesheet" href="css/reset.css"> -->
+  <link rel="stylesheet" href="/css/bootstrap-custom.css">
   <link rel="stylesheet" href="css/styles.css" media="screen">
-  <link rel="stylesheet" href="css/reset.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
