--- a/client/views/layouts/interior-layout.hbs
+++ b/client/views/layouts/interior-layout.hbs
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="foundation/foundation-float.min.css" media="screen">
   <link rel="stylesheet" href="css/styles.css" media="screen">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
@@ -18,6 +17,7 @@
 <script src="jquery/jquery.min.js"></script>
 <script src="foundation/foundation.min.js"></script>
 <script src="js/scripts.js"></script>
+<script src="js/modal.js"></script>
 
 <script>
   $(document).foundation();
