--- a/client/assets/css/styles.css
+++ b/client/assets/css/styles.css
@@ -7,11 +7,11 @@
   color: #fff;
   font-weight: bold;
   font-size: 30px;
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 }
 /* Footer */
 footer {
-  background: #f1f1f1;
+  background: gray;
 }
 footer .footer-list {
   display: inline-block;
