--- a/client/assets/less/styles.less
+++ b/client/assets/less/styles.less
@@ -7,13 +7,13 @@
       color: #fff;
       font-weight: bold;
       font-size: 30px;
-      margin-bottom: 20px;
+      margin-bottom: 25px;
     }
 }
 
 /* Footer */
 footer {
-  background: #f1f1f1;
+  background: gray;
 }
 
 footer .footer-list {
