--- a/client/views/partials/banner.hbs
+++ b/client/views/partials/banner.hbs
@@ -1,10 +1,8 @@
-<section class="banner-wrap">
+<div class="banner container-fluid">
     <div class="row">
-        <div class="col-md-12">
-            <div class="banner">
-                <h1>Banner Header</h1>
-                <h4>Banner Subheader</h4>
-            </div>
+        <div class="col-sm-12">
+            <h1>Banner Header</h1>
+            <h4>Banner Subheader</h4>
         </div>
     </div>
-</section>
+</div>
